dynamic func added

--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -51,18 +51,18 @@
       <div class="content-of-dashbord">
         <div class="main-content">
           <section class="stats-section">
-            <div class="stat-item">
+            <div class="stat-item courses-active" id="courses">
               <div class="stat-icon">
-                <img src="./assets/icons/courses.svg" alt="" srcset="" />
+                <img src="./assets/icons/courses.svg" alt="" />
               </div>
               <div class="stat-info">
                 <h3>4</h3>
                 <p>Courses</p>
               </div>
             </div>
-            <div class="stat-item">
+            <div class="stat-item stat-active" id="classes">
               <div class="stat-icon">
-                <img src="./assets/icons/classes.svg" alt="" srcset="" />
+                <img src="./assets/icons/classes.svg" alt="" />
               </div>
               <div class="stat-info">
                 <h3>4</h3>
@@ -81,7 +81,7 @@
               <option>Students</option>
             </select>
             <button class="sort-btn">
-              <img src="./assets/icons/back.svg" alt="" srcset="" />
+              <img src="./assets/icons/sort.svg" alt="" srcset="" />
             </button>
           </div>
         </div>
