dash bord box issue solve

--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -123,7 +123,7 @@
                         <option value="C">Class C</option>
                       </select>
                     </div>
-                    <div class="classs-info">
+                    <div class="class-info">
                       <div class="student-count">50 Students</div>
                       <div class="sub-line"></div>
                       <div class="class-duration">
@@ -247,7 +247,7 @@
                         <option value="C">Class C</option>
                       </select>
                     </div>
-                    <div class="classs-info">
+                    <div class="class-info">
                       <div class="student-count">300 Students</div>
                     </div>
                   </div>
@@ -301,7 +301,7 @@
                         <option value="C">Class C</option>
                       </select>
                     </div>
-                    <div class="classs-info">
+                    <div class="class-info">
                       <div class="student-count">44 Students</div>
                       <div class="sub-line"></div>
                       <div class="class-duration">
