--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -17,11 +17,58 @@
           srcset=""
         />
         <div class="nav-links">
-          <a href="#" class="active">dashboard</a>
-          <a href="#">content</a>
-          <a href="#">users</a>
-          <a href="#">reports</a>
-          <a href="#">admin</a>
+          <div class="nav-item active">
+            <div class="link-and-arrow">
+              <a href="#">dashboard</a>
+            </div>
+          </div>
+          <div class="nav-item">
+            <div class="link-and-arrow">
+              <a href="#">content</a>
+              <img
+                src="./assets/icons/arrow-down.svg"
+                class="arrow"
+                alt=""
+                srcset=""
+              />
+            </div>
+            <div class="sub-links">
+              <a href="#">COURSE CATALOG</a>
+            </div>
+          </div>
+          <div class="nav-item">
+            <div class="link-and-arrow">
+              <a href="#">users</a>
+              <img
+                src="./assets/icons/arrow-down.svg"
+                class="arrow"
+                alt=""
+                srcset=""
+              />
+            </div>
+          </div>
+          <div class="nav-item">
+            <div class="link-and-arrow">
+              <a href="#">reports</a>
+              <img
+                src="./assets/icons/arrow-down.svg"
+                class="arrow"
+                alt=""
+                srcset=""
+              />
+            </div>
+          </div>
+          <div class="nav-item">
+            <div class="link-and-arrow">
+              <a href="#">admin</a>
+              <img
+                src="./assets/icons/arrow-down.svg"
+                class="arrow"
+                alt=""
+                srcset=""
+              />
+            </div>
+          </div>
         </div>
         <div class="notifications">
           <div class="alerts">
