--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -71,15 +71,435 @@
           </div>
         </div>
         <div class="notifications">
-          <div class="alerts">
+          <div class="alert-icon">
             <img src="./assets/icons/alerts.svg" alt="" srcset="" />
             <div class="alert-count">3</div>
           </div>
-          <div class="announcement">
+          <div class="alerts-box">
+            <div class="alert-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  License for Introduction to Algebra has been assigned to your
+                  school
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+
+              <div class="alert-time">15-Sep-2018 at 07:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele alert-white-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  Lesson 3 Practice Worksheet overdue for Amy Santiago
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/correct.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-info">
+                Course:
+                <span class="alert-info-course">Advanced Mathematics</span>
+              </div>
+              <div class="alert-time">15-Sep-2018 at 05:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">23 new students created</div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-time">14-Sep-2018 at 01:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  15 submissions ready for evaluation
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-info">
+                Class:
+                <span class="alert-info-course">Basics of Algebra</span>
+              </div>
+              <div class="alert-time">13-Sep-2018 at 01:15 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  License for Basic Concepts in Geometry has been assigned to
+                  your... school
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-time">15-Sep-2018 at 07:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele alert-white-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  Lesson 3 Practice Worksheet overdue for Sam Diego
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-info">
+                Course:
+                <span class="alert-info-course">Advanced Mathematics</span>
+              </div>
+              <div class="alert-time">15-Sep-2018 at 07:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  License for Introduction to Algebra has been assigned to your
+                  school
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-time">15-Sep-2018 at 07:21 pm</div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="alert-ele alert-white-ele">
+              <div class="alert-text-and-icon">
+                <div class="alert-text">
+                  License for Introduction to Algebra has been assigned to your
+                  school
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="alert-time">15-Sep-2018 at 07:21 pm</div>
+            </div>
+            <div class="show-all">Show All</div>
+          </div>
+          <div class="announcement-icon">
             <img src="./assets/icons/announcements.svg" alt="" srcset="" />
             <div class="announcement-count">2</div>
           </div>
-          <div class="profile">
+          <div class="announcements-box">
+            <div class="announcement-ele announcement-white-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/correct.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                Guest lecture on Geometry on 20th September
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="announcement-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Samson White</span>
+                </div>
+
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                No classes will be held on 21st Nov
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="notification-line"></div>
+            <div class="announcement-ele announcement-white-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/correct.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                Additional course materials available on request
+              </div>
+              <div class="announcement-course-info">
+                Course: Mathematics 101
+              </div>
+              <div class="announcement-info-and-time">
+                <!-- <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div> -->
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="announcement-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                No classes will be held on 25th Dec
+              </div>
+              <div class="announcement-info-and-time">
+                <!-- <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div> -->
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="announcement-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                Additional course materials available on request
+              </div>
+              <div class="announcement-course-info">
+                Course: Mathematics 101
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="announcement-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                No classes will be held on 21st Nov
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="announcement-ele announcement-white-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/correct.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                No classes will be held on 21st Nov
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+            <div class="announcement-ele">
+              <div class="announcement-title-and-icon">
+                <div class="announcement-title">
+                  PA: <span class="announcement-title-name">Wilson Kumar</span>
+                </div>
+                <div class="alert-icon">
+                  <img
+                    src="./assets/icons/minus.png"
+                    alt=""
+                    class="minus-icon"
+                    srcset=""
+                  />
+                </div>
+              </div>
+              <div class="announcement-text">
+                No classes will be held on 21st Nov
+              </div>
+              <div class="announcement-info-and-time">
+                <div class="announcement-info">
+                  <img
+                    src="./assets/icons/attach.png"
+                    alt=""
+                    srcset=""
+                    class="attach-icon"
+                  />
+                  <span class="announcement-info-text"
+                    >2 files are attached</span
+                  >
+                </div>
+                <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
+              </div>
+            </div>
+          </div>
+          <div class="profile-icon">
             <img src="./assets/icons/account_circle.svg" alt="" srcset="" />
             <div class="profile-role">T</div>
           </div>
