hover delay added

--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -335,6 +335,7 @@
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
             </div>
+            <div class="notification-line"></div>
             <div class="announcement-ele">
               <div class="announcement-title-and-icon">
                 <div class="announcement-title">
@@ -367,6 +368,8 @@
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
             </div>
+            <div class="notification-line"></div>
+
             <div class="announcement-ele">
               <div class="announcement-title-and-icon">
                 <div class="announcement-title">
@@ -402,6 +405,8 @@
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
             </div>
+            <div class="notification-line"></div>
+
             <div class="announcement-ele">
               <div class="announcement-title-and-icon">
                 <div class="announcement-title">
@@ -434,6 +439,7 @@
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
             </div>
+            <div class="notification-line"></div>
             <div class="announcement-ele announcement-white-ele">
               <div class="announcement-title-and-icon">
                 <div class="announcement-title">
@@ -466,6 +472,8 @@
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
             </div>
+            <div class="notification-line"></div>
+
             <div class="announcement-ele">
               <div class="announcement-title-and-icon">
                 <div class="announcement-title">
@@ -497,6 +505,11 @@
                 </div>
                 <div class="announcement-time">15-Sep-2018 at 07:21 pm</div>
               </div>
+            </div>
+            <div class="show-all-and-create-new">
+              <div class="show-all">Show All</div>
+              <div class="line-of-announcement"></div>
+              <div class="create-new">create new</div>
             </div>
           </div>
           <div class="profile-icon">
