--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -158,5 +158,5 @@
       </div>
     </div>
   </body>
-  <script src="./js//teacher_dashbord.js"></script>
+  <script src="./ts/dist/teacher_dashbord.js"></script>
 </html>
