--- a/task_7/index.html
+++ b/task_7/index.html
@@ -7,6 +7,6 @@
     <title>Task 7</title>
   </head>
   <body>
-    <script src="./index.js"></script>
+    <script src="./indexV2.js"></script>
   </body>
 </html>
