--- a/task_7/index.html
+++ b/task_7/index.html
@@ -7,6 +7,7 @@
     <title>Task 7</title>
   </head>
   <body>
+    <div class="container" id="container"></div>
     <script src="./indexV2.js"></script>
   </body>
 </html>
