class file added

--- a/task_7/index.html
+++ b/task_7/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="container" id="container"></div>
-    <script src="./indexV2.js"></script>
+    <script type="module" src="./indexV2.js"></script>
   </body>
 </html>
