--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="dashbord-container">
-      <div class="nav-bar">
+      <nav class="nav-bar">
         <img
           src="./assets/icons/logo used in header.svg"
           class="nav-bar-logo"
@@ -96,7 +96,7 @@
             />
           </button>
         </div>
-      </div>
+      </nav>
       <div class="content-of-dashbord">
         <div class="main-content">
           <section class="stats-section">
