--- a/canvas/canvas_resize/index.html
+++ b/canvas/canvas_resize/index.html
@@ -9,12 +9,13 @@
         border: 1px solid black;
       }
       body {
+        touch-action: none;
         margin: 0px;
       }
     </style>
   </head>
   <body>
     <canvas></canvas>
-    <script src="./canvas.js"></script>
+    <script src="./event_animation.js"></script>
   </body>
 </html>
