--- a/task_8/index.html
+++ b/task_8/index.html
@@ -16,7 +16,8 @@
       <span id="stats-display"></span>
     </div>
 
-    <div class="grid-container">
+    <div class="grid-container" id="grid_container">
+      <div class="virtual-class" id="virtual_class"></div>
       <canvas id="excel-grid"></canvas>
     </div>
     <script src="js/main.js" type="module"></script>
