--- a/task_8/index.html
+++ b/task_8/index.html
@@ -18,8 +18,9 @@
 
     <div class="grid-container" id="grid_container">
       <div class="virtual-class" id="virtual_class"></div>
-      <canvas id="excel-grid"></canvas>
+      <!-- <canvas id="excel-grid"></canvas> -->
     </div>
     <script src="js/main.js" type="module"></script>
+    <!-- <script src="./temp.js" type="module"></script> -->
   </body>
 </html>
