select cells set removed

--- a/task_8/index.html
+++ b/task_8/index.html
@@ -12,13 +12,13 @@
   </head>
 
   <body>
-    <div class="toolbar">
-      <span id="stats-display"></span>
-    </div>
-
-    <div class="grid-container" id="grid_container">
-      <canvas id="excel-grid"></canvas>
-      <div class="virtual-class" id="virtual_class"></div>
+    <div class="container">
+      <div class="toolbar"></div>
+      <div class="grid-container" id="grid_container">
+        <canvas id="excel-grid"></canvas>
+        <div class="virtual-class" id="virtual_class"></div>
+      </div>
+      <div class="stats-bar"><span id="stats-display"></span></div>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
